--- a/how-to-download.html
+++ b/how-to-download.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>how to download</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>how to download</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="https://vortexpulse-studios.github.io/gamenest-web/index.html">web version</a>
+            <a href="https://vortexpulse-studios.github.io/gamenest-dev/index.html">Developer</a>
+        </nav>
+    </header>
 
+    <main>
+        <section id="intro">
+            <h2>how to download</h2>
+            <p>First, download the .zip folder and extract it. Open it up and open the folder after that and then just open My-local-app.</p>
+        </section>
+
+    </main>
+
+    <footer>
+        <p>&copy; 2024 VortexPulse studios. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
