--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Select your platform to download:</p>
             <ul>
                 <li><a href="https://github.com/vortexpulse-studios/gamenest-download/releases/tag/gamenest" download>Download the app</a></li>
-                <li></li><a href="https://vortexpulse-studios.github.io/gamenest-dev/how-to-download.html">how to download</a></li>
+                <li></li><a href="https://vortexpulse-studios.github.io/gamenest-dev/how-to-download.html">How to download</a></li>
             </ul>
         </section>
     </main>
