--- a/how-to-download.html
+++ b/how-to-download.html
@@ -19,7 +19,7 @@
     <main>
         <section id="intro">
             <h2>how to download</h2>
-            <p>First, download the .zip folder and extract it. Open it up and open the folder after that and then just open My-local-app.</p>
+            <p>First, download the .zip folder and extract it. Open it up and open the folder after that and then just open gamenest.</p>
         </section>
 
     </main>
