--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="index.html">Home</a>
             <a href="https://vortexpulse-studios.github.io/gamenest-web/index.html">web version</a>
             <a href="https://vortexpulse-studios.github.io/gamenest-dev/index.html">Developer</a>
+            <a herf="https://vortexpulse-studios.github.io/web/index.html">VortexPulse studios</a>
         </nav>
     </header>
 
